@@ -51,3 +51,6 @@ TODO/BUGS before releasing 2.0.0pre1:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 * delinking/relinking of non-irc windows
+
+* http://sourceforge.net/tracker/?func=browse&group_id=239&atid=100239
+
