@@ -15,6 +15,7 @@
    * Added xchat_get_info("network").
    * Added new function: xchat_hook_fd().
    * Fixed "DCC Chat Text" event (Daniel P. Stasinski).
+   * Added "Open Context" print event.
    * Fixed implementation of EAT_ return codes.
    * Keep the leading ":" in server events passed to plugins.
    * Added hack to make plugins possible on win32.
@@ -33,6 +34,7 @@
  - Use --enable-openssl by default.
  - Fixed your nick not changing in dialog windows.
  - xtext: deal better with invalid utf8.
+ - Made it possible to do /server <networkname>.
  - 
 
 
